opdc/106th/source/sample-complete/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample
  labels:
    app: sample
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample
  template:
    metadata:
      labels:
        app: sample
    spec:
      containers:
        - name: sample
          image: sample:0.0.2
          ports:
            - containerPort: 8080
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "0.5"
              memory: 0.5Gi
            limits:
              cpu: "0.5"
              memory: 0.5Gi
