opdc/106th/source/sample-complete/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: nginx
  rules:
    - host: opdc.io
      http:
        paths:
          - pathType: ImplementationSpecific
            path: /boot
            backend:
              service:
                name: sample
                port:
                  number: 8080
